--- a/content/posts/33a947b20f.md
+++ b/content/posts/33a947b20f.md
@@ -2,7 +2,8 @@
 title: "文生图模型写字的简易解决方案"
 date: "2025-08-31"
 tags: ["AI"]
-description: "把需要写的字做成参考图，「手把手」教模型写字"
+summary: &desc "把需要写的字做成参考图，「手把手」教模型写字"
+description: *desc
 ---
 
 众所周知，让文生图模型写字（尤其是汉字）很困难。
