chore: small tweaks

--- a/content/posts/33a947b20f.md
+++ b/content/posts/33a947b20f.md
@@ -2,6 +2,7 @@
 title: "文生图模型写字的简易解决方案"
 date: "2025-08-31"
 tags: ["AI"]
+categories: ["科技"]
 summary: &desc "把需要写的字做成参考图，「手把手」教模型写字"
 description: *desc
 ---
